--- a/styles.css
+++ b/styles.css
@@ -1320,3 +1320,653 @@ color: rgb(0, 0, 0);
 .snipcart__loading__screen__icon path.active {
   fill: black;
 }
+
+
+
+/* MEDIA QUERIES */
+
+@media (max-width: 600px) {
+  .collection-items-wrapper {
+    grid-template-columns: 1fr;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .featured-content {
+    margin-left: 150px;
+    margin-right: 150px;
+  }
+  .nav-wrapper {
+    margin-left: 40px;
+  }
+  .nav-wrapper > .center-side > div {
+    margin-right: 40px;
+  }
+  .index-wrapper {
+    margin-left: 10px;
+  }
+  .shopping {
+    margin-left: 410px;
+  }
+  .search-bar {
+    opacity: 0;
+    margin-left: 230px;
+  }
+  .twitter {
+    margin-left: 15px;
+  }
+  .insta {
+    margin-left: 55px;
+  }
+  .facebook {
+    margin-left: 95px;
+  }
+  .other-stuff {
+    padding-left: 5px;
+  }
+  .copyright {
+    margin-left: 55px;
+  }
+  .credit-cards{
+    padding-left: 50px;
+  }
+  .socials {
+    padding-left: 349px
+  }
+  .mini-logo {
+    margin-left: 195px;
+  }
+  .row {
+    grid-template-columns: 1fr;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .contact-us {
+    margin-right: 186px;
+    margin-left: 186px;
+  }
+  .about-section {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  .contact-form {
+    width: 100%;
+    margin-left: 5px;
+  }
+  .shipping-section {
+    margin-right: 201px;
+    margin-left: 201px;
+  }
+  
+  .returns-section {
+    margin-right: 202px;
+    margin-left: 202px;
+  }
+  
+  .size-guides-section {
+    margin-right: 189px;
+    margin-left: 189px;
+  }
+  input[type=submit] {
+    margin-left: 173px;
+  }
+  .mySlides1 {
+    padding-left: 0px;
+  }
+  .slide-wrapper {
+    padding-left: 0px;
+    padding-top: 10px;
+  }
+  .product-wrapper {
+    padding-left: 0px;
+  }
+  .prev1 {
+    padding-left: 0px;
+    padding-top: 0px;
+  }
+  
+  .related-items-wrapper {
+    grid-template-columns: 1fr;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-top: 550px;
+  }
+  .related-products {
+    margin-right: 152px;
+    margin-left: 152px;
+    opacity: 0;
+  }
+  .buy-buttons {
+    padding-left: 155px;
+  }
+  .container2 {
+    display: inherit;
+  }
+  .container1 {
+    display: inherit;
+  }
+  .sizing-guides1 {
+    padding-left: 190px;
+  }
+  .dropdown-wrapper {
+    margin-left: 187px;
+  }
+  .next1 {
+    right: -110px;
+    padding-top: 0px;
+  }
+}
+
+@media (min-width: 600px) {
+  .collection-items-wrapper {
+    grid-template-columns: 1fr;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .featured-content {
+    margin-left: 200px;
+    margin-right: 200px;
+  }
+  .nav-wrapper {
+    margin-left: 40px;
+  }
+  .nav-wrapper > .center-side > div {
+    margin-right: 40px;
+  }
+  .index-wrapper {
+    margin-left: 25px;
+  }
+  .shopping {
+    margin-left: 510px;
+  }
+  .search-bar {
+    opacity: 0;
+    margin-left: 230px;
+  }
+  .twitter {
+    margin-left: 15px;
+  }
+  .insta {
+    margin-left: 55px;
+  }
+  .facebook {
+    margin-left: 95px;
+  }
+  .other-stuff {
+    padding-left: 5px;
+  }
+  .copyright {
+    margin-left: 55px;
+  }
+  .credit-cards{
+    padding-left: 50px;
+  }
+  .socials {
+    padding-left: 449px
+  }
+  .mini-logo {
+    margin-left: 205px;
+  }
+  .row {
+    grid-template-columns: 1fr;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .contact-us {
+    margin-right: 236px;
+    margin-left: 236px;
+  }
+  .about-section {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .contact-form {
+    width: 100%;
+    margin-left: 10px;
+  }
+  .shipping-section {
+    margin-right: 250px;
+    margin-left: 250px;
+  }
+  
+  .returns-section {
+    margin-right: 252px;
+    margin-left: 252px;
+  }
+  
+  .size-guides-section {
+    margin-right: 239px;
+    margin-left: 239px;
+  }
+  input[type=submit] {
+    margin-left: 220px;
+  }
+  .mySlides1 {
+    padding-left: 0px;
+  }
+  .slide-wrapper {
+    padding-left: 0px;
+    padding-top: 20px;
+  }
+  .product-wrapper {
+    padding-left: 30px;
+  }
+  .prev1 {
+    padding-left: 0px;
+    padding-top: 0px;
+  }
+  .related-items-wrapper {
+    grid-template-columns: 1fr;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-top: 500px;
+  }
+  .related-products {
+    margin-right: 152px;
+    margin-left: 152px;
+    opacity: 0;
+  }
+  .buy-buttons {
+    padding-left: 170px;
+  }
+  .container2 {
+    display: inherit;
+  }
+  .container1 {
+    display: inherit;
+  }
+  .sizing-guides1 {
+    padding-left: 208px;
+  }
+  .dropdown-wrapper {
+    margin-left: 204px;
+  }
+  .next1 {
+    right: 0px;
+    padding-top: 0px;
+  }
+}
+
+@media (min-width: 690px) {
+  .collection-items-wrapper {
+    grid-template-columns: 1fr 1fr;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .featured-content {
+    margin-left: 245px;
+    margin-right: 245px;
+  }
+  .nav-wrapper {
+    margin-left: 40px;
+  }
+  .nav-wrapper > .center-side > div {
+    margin-right: 40px;
+  }
+  .index-wrapper {
+    margin-left: 45px;
+  }
+  .shopping {
+    margin-left: 610px;
+  }
+  .search-bar {
+    opacity: 1;
+    margin-left: 420px;
+  }
+  .twitter {
+    margin-left: 50px;
+  }
+  .insta {
+    margin-left: 95px;
+  }
+  .facebook {
+  margin-left: 139px;
+  }
+  .copyright {
+    margin-left: 145px;
+  }
+  .credit-cards{
+    padding-left: 60px;
+  }
+  .socials {
+    padding-left: 545px
+  }
+  .mini-logo {
+    margin-left: 295px;
+  }
+  .row {
+    grid-template-columns: 1fr 1fr;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .contact-us {
+    margin-right: 281px;
+    margin-left: 281px;
+  }
+  .about-section {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  .contact-form {
+    width: 90%;
+    margin-left: 35px;
+  }
+  .shipping-section {
+    margin-right: 296px;
+    margin-left: 296px;
+  }
+  
+  .returns-section {
+    margin-right: 297px;
+    margin-left: 297px;
+  }
+  
+  .size-guides-section {
+    margin-right: 284px;
+    margin-left: 284px;
+  }
+  input[type=submit] {
+    margin-left: 240px;
+  }
+  .mySlides1 {
+    padding-left: 40px;
+  }
+  .slide-wrapper {
+    padding-left: 0px;
+    padding-top: 40px;
+  }
+  .product-wrapper {
+    padding-left: 80px;
+  }
+  .prev1 {
+    padding-left: 40px;
+    padding-top: 10px;
+  }
+  .related-items-wrapper {
+    grid-template-columns: 1fr 1fr;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-top: 500px;
+  }
+  .related-products {
+    margin-right: 152px;
+    margin-left: 152px;
+    opacity: 0;
+  }
+  .buy-buttons {
+    padding-left: 170px;
+  }
+  .container2 {
+    display: inherit;
+  }
+  .container1 {
+    display: inherit;
+  }
+  .sizing-guides1 {
+    padding-left: 208px;
+  }
+  .dropdown-wrapper {
+    margin-left: 204px;
+  }
+  .next1 {
+    right: 40px;
+    padding-top: 10px;
+  }
+}
+
+@media (min-width: 992px) {
+  .collection-items-wrapper {
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .featured-content {
+    margin-left: 396px;
+    margin-right: 396px;
+  }
+  .nav-wrapper {
+    margin-left: 77px;
+  }
+  .nav-wrapper > .center-side > div {
+    margin-right: 80px;
+  }
+  .index-wrapper {
+    margin-left: 80px;
+  }
+  .shopping {
+    margin-left: 923px;
+  }
+  .search-bar {
+    opacity: 1;
+    margin-left: 723px;
+  }
+  .twitter {
+    margin-left: 65px;
+}
+.insta {
+    margin-left: 110px;
+}
+.facebook {
+  margin-left: 154px;
+}
+  .copyright {
+    margin-left: 300px;
+  }
+  .other-stuff {
+    padding-left: 15px;
+  }
+  .credit-cards{
+    padding-left: 210px;
+  }
+  .socials {
+    padding-left: 875px
+  }
+  .mini-logo {
+    margin-left: 460px;
+  }
+  .row {
+    grid-template-columns: 1fr 1fr;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .contact-us {
+    margin-right: 432px;
+    margin-left: 432px;
+  }
+  .about-section {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+  .contact-form {
+    width: 80%;
+    margin-left: 100px;
+  }
+  .shipping-section {
+    margin-right: 447px;
+    margin-left: 447px;
+  }
+  
+  .returns-section {
+    margin-right: 448px;
+    margin-left: 448px;
+  }
+  
+  .size-guides-section {
+    margin-right: 435px;
+    margin-left: 435px;
+  }
+  input[type=submit] {
+    margin-left: 325px;
+  }
+  .product-wrapper {
+    padding-top: 15px;
+    padding-left: 20px;
+  }
+  .container1 {
+    display: flex;
+  }
+  
+  .container2 {
+    flex: 50%;
+  }
+  
+  .slide-wrapper {
+    padding-left: 10px;
+    padding-top: 40px;
+  }
+  
+  .mySlides1 {
+    padding-left: 10px;
+  }
+  .related-products {
+    opacity: 1;
+    margin-right: 400px;
+    margin-left: 400px;
+    margin-top: 200px;
+  }
+  
+  .related-items-wrapper {
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: -480px;
+  }
+  .buy-buttons {
+    padding-left: 95px;
+  }
+  .sizing-guides1 {
+    padding-left: 130px;
+  }
+  .dropdown-wrapper {
+    margin-left: 130px;
+  }
+  .next1 {
+    right: 395px;
+    padding-top: 10px;
+  }
+  .prev1 {
+    padding-left: 10px;
+    padding-top: 10px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .collection-items-wrapper {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-left: 180px;
+    margin-right: 180px;
+  }
+  .featured-content {
+    margin-right: 860px;
+    margin-left: 860px;
+  }
+  .index-wrapper {
+    margin-left: 213px;
+  }
+  .search-bar {
+    margin-left: 1589px;
+    }
+    .nav-wrapper {
+      margin-left: 77px;
+  }
+  .nav-wrapper > .center-side > div {
+      margin-right: 80px;
+  }
+  .index-wrapper {
+    margin-left: 213px;
+  }
+  .copyright {
+    margin-left: 745px;
+  }
+  .shopping {
+    margin-left: 1791px;
+  }
+  .mini-logo {
+    margin-left: 905px;
+  }
+  .socials {
+    padding-left: 1714px;
+  }
+  .credit-cards {
+    padding-left: 605px;
+  }
+  .row {
+    grid-template-columns: 1fr 1fr 1fr;
+    padding-right: 44px;
+    padding-left: 44px;
+  }
+  .contact-us {
+    margin-right: 882px;
+    margin-left: 882px;
+  }
+  .about-section {
+    margin-left: 80px;
+    margin-right: 80px;
+  }
+  .contact-form {
+    width: 60%;
+    margin-left: 380px;
+  }
+  .shipping-section {
+    margin-right: 905px;
+    margin-left: 905px;
+  }
+  
+  .returns-section {
+    margin-right: 908px;
+    margin-left: 908px;
+  }
+  
+  .size-guides-section {
+    margin-right: 896px;
+    margin-left: 896px;
+  }
+  input[type=submit] {
+    margin-left: 510px;
+  }
+  .container1 {
+    display: flex;
+  }
+  .container2 {
+    flex: 50%;
+  }
+  .mySlides1 {
+    padding-left: 80px;
+  }
+  .slide-wrapper {
+    padding-left: 240px;
+    padding-top: 80px;
+  }
+  .product-wrapper {
+    padding-top: 55px;
+    padding-left: 40px;
+  }
+  .dropdown-wrapper {
+    margin-left: 202px;
+    margin-bottom: 30px;
+  }
+  .sizing-guides1 {
+    padding-left: 206px;
+  }
+  .buy-buttons {
+    padding-left: 170px;
+  }
+  .related-products {
+    margin-right: 859px;
+    margin-left: 859px;
+    margin-top: 50px;
+  }
+  
+  .related-items-wrapper {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    margin-left: 62px;
+    margin-right: 62px;
+  }
+  .next1 {
+    right: 990px;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  .prev1 {
+    padding-left: 80px;
+  }
+}
