--- a/styles.css
+++ b/styles.css
@@ -352,8 +352,8 @@ form.example::after {
 
 .featured-content {
     border-bottom: 2px solid white;
-    margin-right: 860px;
-    margin-left: 860px;
+    margin-right: 44%;
+    margin-left: 44%;
 }
 
 /*subtitle text*/
@@ -1363,6 +1363,10 @@ color: rgb(0, 0, 0);
       padding-right: 0.3%;
       padding-left: 1%;
     }
+    .featured-content {
+      margin-right: 42.1%;
+      margin-left: 42.1%;
+    }
 }
 
 @media (max-width: 1200px) {
@@ -1437,6 +1441,10 @@ color: rgb(0, 0, 0);
       padding-right: 75%;
       padding-left: 20%;
     }
+    .featured-content {
+      margin-right: 38.1%;
+      margin-left: 38.1%;
+    }
 }
 
 @media (max-width: 800px) {
@@ -1498,5 +1506,9 @@ color: rgb(0, 0, 0);
       grid-template-columns: 1fr;
       padding-right: 75%;
       padding-left: 10%;
+    }
+    .featured-content {
+      margin-right: 33%;
+      margin-left: 33%;
     }
 }
