--- a/styles.css
+++ b/styles.css
@@ -531,6 +531,17 @@ in order for the aspect ratio trick to work*/
   height: 100%;
 }
 
+.countdown-clock {
+  color: rgb(9, 255, 0); 
+  margin-right: 2%; 
+  font-size: 1.6em;
+  text-align: center;
+}
+
+.size-img-wrapper {
+  color: white;
+}
+
 /* Animations */
 @keyframes toRight {
   0% {
